Avance con el proyecto tras haber configurado correctamente el desarrollo remoto con Dev-Containers en Docker.

--- a/building-rna-from-scratch.ipynb
+++ b/building-rna-from-scratch.ipynb
@@ -190,7 +190,7 @@
     "    hidden_units = num_hidden_units \n",
     "    output_units = Y.shape[0]\n",
     "\n",
-    "    return (input_units, hidden_layers, hidden_units, output_units)"
+    "    return (input_units, hidden_layers, hidden_units, output_units)º"
    ]
   },
   {
